# borderlands3-save-editor

./: CMakeLists.txt  Constants.cpp  Constants.h  MainWindow.cpp  MainWindow.h  OakSave.pb.h  OakShared.pb.h  README.md  Savegame.cpp  Savegame.h  borderlands3-save-editor.pro  data.qrc  generaltab.cpp  generaltab.h  inventoryserialdb.json.qcompress  main.cpp
data/: artifacts.tsv  balance_to_inv_key.json  bl3.bms  classmod-parts.tsv  english-names.json  grenade-parts.tsv  inventory-serials.json  item-data.json  mission-names.json  mission-objectives.json  missions.json  shield-parts.tsv  weapon-parts.tsv
data/descriptions/: README  anointments.csv  ar-cov.tsv  ar-dal.csv  ar-tor.csv  ar-vla.csv  artifacts.tsv  com-amara.csv  com-fl4k.csv  com-zane.csv  grenades.csv  grenades.tsv  hw-cov.csv  hw-tor.tsv  hw-vla.csv  ps-atl.csv  ps-cov.csv  ps-dal.csv  ps-jak.csv  ps-mal.csv  ps-ted.tsv  ps-tor.tsv  ps-vla.csv  sg-jak.csv  sg-mal.csv  sg-ted.csv  sg-tor.csv  shields.csv  shields.tsv  sm-hyp.csv  sm-mal.csv  sm-ted.csv  sr-dal.tsv  sr-hyp.tsv  sr-mal.csv  sr-vla.csv
data/descriptions/weapons/: ar-atl.tsv  ar-jak.tsv  hw-atl.tsv  sg-hyp.tsv  sm-dal.tsv  sr-jak.tsv
src/: Constants.cpp  ConsumablesTab.cpp  ConsumablesTab.h  GameSettingsTab.cpp  GameSettingsTab.h  GeneralTab.cpp  GeneralTab.h  InventoryItem.h  InventoryTab.cpp  InventoryTab.h  ItemData.cpp  ItemData.h  Lol.cpp  Lol.h  MainWindow.cpp  MainWindow.h  MissionsTab.cpp  MissionsTab.h  OakProfile.pb.cc  OakProfile.pb.h  OakSave.pb.cc  OakSave.pb.h  OakShared.pb.cc  OakShared.pb.h  Savegame.cpp  Savegame.h  generaltab.cpp  obfuscation.h
src/json/: basics.json
